Changes since version 3.0.1
---------------------------

- Removed getDefaultProperties() functions, and the global default
  properties. If you need global properties, you can easily
  create your own global variable.

- In Ice::Service, main(), run() and initializeCommunicator() take
  now a third parameter, const InitializationData&. It's defaulted
  for main() and run().

- The signature of createProperties()-with-parameters is now:
  PropertiesPtr createProperties(int* argc, char* argv[],
                                 const PropertiesPtr& defaults = 0);
  "defaults" represents an optional set of default properties
  used to initialize the new Properties object. Ice properties 
  defined on the command-line and properties defined in the Ice
  config file may override these default properties.
   
- Added a new communicator-initialization function:
  CommunicatorPtr initialize(const InitializationData&);

- Fixed a bug in dumpdb so that it handles object graphs correctly.

- Fixed a bug where the proxy timeout, compress flag and connection
  id attributes would be ignored for direct proxies using a router.

- Added ability to configure Ice thread start/stop hooks through
  InitializationData.

- Added SSL authorization as an alternative to username/password
  for Glacier2.  To authorize with SSL call
  Glacier2::Router::createSessionFromSecureConnection().  On the
  server side Glacier2::SSLPermissionsVerifier and
  Glacier2::SSLSessionManager must be implemented.

- Added identityToString and stringToIdentity to the Communicator
  interface. If a string converter is configured these functions
  must be used instead of the current static functions.

- Added ability to configure user defined string and wstring 
  converters that are used during marshalling/unmarshalling to
  convert between UTF8 as required in the over-the-wire stream
  and the users character set.

- Added operators <=, > and >= for slice classes, proxies and
  structures.
