@@ -463,13 +463,27 @@ Slice::CsGenerator::writeMarshalUnmarshalCode(Output &out,
     {
         if(marshal)
         {
-            out << nl << param << ".write__(" << stream << ");";
+	    if(streamingAPI)
+	    {
+		out << nl << param << ".ice_write(" << stream << ");";
+	    }
+	    else
+	    {
+		out << nl << param << ".write__(" << stream << ");";
+	    }
         }
         else
         {
             string typeS = typeToString(type);
             out << nl << param << " = new " << typeS << "();";
-            out << nl << param << ".read__(" << stream << ");";
+	    if(streamingAPI)
+	    {
+		out << nl << param << ".ice_read(" << stream << ");";
+	    }
+	    else
+	    {
+		out << nl << param << ".read__(" << stream << ");";
+	    }
         }
         return;
     }
@@ -756,7 +770,14 @@ Slice::CsGenerator::writeSequenceMarshalUnmarshalCode(Output& out,
 	    out << nl << stream << ".writeSize(" << param << '.' << limitID << ");";
 	    out << nl << "for(int ix__ = 0; ix__ < " << param << '.' << limitID << "; ++ix__)";
 	    out << sb;
-	    out << nl << param << "[ix__].write__(" << stream << ");";
+	    if(streamingAPI)
+	    {
+		out << nl << param << "[ix__].ice_write(" << stream << ");";
+	    }
+	    else
+	    {
+		out << nl << param << "[ix__].write__(" << stream << ");";
+	    }
 	    out << eb;
 	    out << eb;
 	}
@@ -793,12 +814,26 @@ Slice::CsGenerator::writeSequenceMarshalUnmarshalCode(Output& out,
 		{
 		    out << nl << param << "[ix__] = new " << typeS << "();";
 		}
-		out << nl << param << "[ix__].read__(" << stream << ");";
+		if(streamingAPI)
+		{
+		    out << nl << param << "[ix__].ice_read(" << stream << ");";
+		}
+		else
+		{
+		    out << nl << param << "[ix__].read__(" << stream << ");";
+		}
 	    }
 	    else
 	    {
 		out << nl << typeS << " val__ = new " << typeS << "();";
-		out << nl << "val__.read__(" << stream << ");";
+		if(streamingAPI)
+		{
+		    out << nl << "val__.ice_read(" << stream << ");";
+		}
+		else
+		{
+		    out << nl << "val__.read__(" << stream << ");";
+		}
 	        out << nl << param << ".Add(val__);";
 	    }
 	    if(!streamingAPI && type->isVariableLength())
